--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/stephtf/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "express": "^4.17.2",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3"
   }
